<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/the_app_to_social_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/extended_title"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:textSize="30sp"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:layout_marginTop="52dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"/>
    <TextView
            android:text="@string/welcome_to_crown_catch"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_height="wrap_content" android:id="@+id/title"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="44dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"/>
    <TextView
            android:text="@string/what_to_do"
            android:layout_width="wrap_content"
            android:textStyle="italic"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_height="wrap_content" android:id="@+id/now_what"
            app:layout_constraintTop_toBottomOf="@+id/extended_title"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="164dp"/>
    <Button
            android:text="@string/view_map"
            android:layout_width="160dp"
            android:textSize="20sp"
            android:layout_height="49dp" android:id="@+id/view_map"
            app:layout_constraintTop_toBottomOf="@+id/now_what"
            android:layout_marginTop="52dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="124dp" android:clickable="true"/>
    <Button
            android:text="@string/view_progress"
            android:layout_width="195dp"
            android:layout_height="58dp" android:id="@+id/view_progress"
            app:layout_constraintTop_toBottomOf="@+id/view_map"
            android:textSize="20sp"
            android:layout_marginTop="44dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="112dp" android:clickable="false"/>
    <Button
            android:text="@string/view_news"
            android:layout_width="165dp"
            android:textSize="20sp"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_height="61dp" android:id="@+id/view_news"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="120dp"
            app:layout_constraintTop_toBottomOf="@+id/view_progress" android:layout_marginTop="40dp"
            android:clickable="false"/>
    <Button
            android:text="@string/set_up_bluetooth"
            android:layout_width="225dp"
            android:textSize="20sp"
            android:layout_height="60dp" android:id="@+id/view_bluetooth"
            app:layout_constraintTop_toBottomOf="@+id/view_news"
            android:layout_marginTop="48dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="92dp" android:clickable="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>