<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_height="match_parent">
    <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content"
                                       android:id="@+id/rssCard"
                                       app:layout_constraintTop_toTopOf="parent"
                                       app:layout_constraintLeft_toLeftOf="parent"
                                       android:layout_marginTop="10dp" >
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:id="@+id/rssPhoto"
                   android:src="@android:mipmap/sym_def_app_icon"
                   android:contentDescription="@string/rss_icon" />
        <TextView android:layout_width="match_parent" android:layout_height="match_parent"
                  android:layout_marginTop="40dp"
                  android:text="@string/sample_rss"
                  android:layout_gravity="end"
                  android:id="@+id/from"
                  android:textSize="30sp"
        />

        <TextView android:layout_width="match_parent" android:layout_height="match_parent"
                  android:layout_marginStart="80dp"
                  android:text="@string/_2_hours_ago"
                  android:textSize="20sp"
                  android:layout_marginTop="40dp"
                  android:id="@+id/hoursago" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>